--- a/Documents/My work 2015/AngularProjects/StockDog/app/views/dashboard.html
+++ b/Documents/My work 2015/AngularProjects/StockDog/app/views/dashboard.html
@@ -1,9 +1,10 @@
 <div class="row">
-  <!-- left column -->
+  <!-- Left Column -->
   <div class="col-md-3">
     <stk-watchlist-panel></stk-watchlist-panel>
   </div>
-  <!-- Right column -->
+
+  <!-- Right Column -->
   <div class="col-md-9">
     <div class="panel panel-info">
       <div class="panel-heading">
@@ -11,7 +12,6 @@
         Portfolio Overview
       </div>
       <div class="panel-body">
-
       </div>
     </div>
   </div>
