--- a/Documents/My work 2015/AngularProjects/StockDog/app/views/watchlist.html
+++ b/Documents/My work 2015/AngularProjects/StockDog/app/views/watchlist.html
@@ -1,6 +1,31 @@
 <div class="row">
+  <!-- Left Column -->
   <div class="col-md-3">
-    <stk-wathclist-panel></stk-wathclist-panel>
+    <stk-watchlist-panel></stk-watchlist-panel>
   </div>
-  <div class="col-md-9"></div>
+
+  <!-- Right Column -->
+  <div class="col-md-9">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <span class="glyphicon glyphicon-list"></span>
+        {{watchlist.description}}
+        <button class="btn btn-success btn-xs pull-right" type="button"
+          ng-click="showStockModal()">
+          <span class="glyphicon glyphicon-plus"></span>
+        </button>
+      </div>
+      <div class="panel-body table-responsive">
+        <div class="jumbotron" ng-hide="stocks.length">
+          <h1>Woof.</h1>
+
+          <p>Looks like ou haven't added any stockes to this watchlist yet!</p>
+
+          <p>Do so now by clicking the <span class="glyphicon glyphicon-plus"></span> located above.</p>
+        </div>
+        <!-- loop over all stocks and display company symbols -->
+        <p ng-repeat="stock in stocks">{{stock.company.symbol}}</p>
+      </div>
+    </div>
+  </div>
 </div>
