--- a/Documents/My work 2015/AngularProjects/StockDog/app/views/templates/addlist-modal.html
+++ b/Documents/My work 2015/AngularProjects/StockDog/app/views/templates/addlist-modal.html
@@ -1,35 +1,49 @@
-<div class="modal well" tabindex="-1" role="dialog">
+<div class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
-      <!-- 1 Invoke $modal.hide() on click -->
       <div class="modal-header">
-        <button class="close" type="button" ng-click="$hide()"> &times;</button>
+        <!-- Invoke $modal.$hide() on click -->
+        <button type="button" class="close"
+          ng-click="$hide()">&times;
+        </button>
         <h4 class="modal-title">Create New Watchlist</h4>
       </div>
-      <!-- 2 Name this form for validation purposes -->
-      <form role="form" name="listForm" id="add-list">
+      <!-- Name this form for validation purposes -->
+      <form role="form" id="add-list" name="listForm">
         <div class="modal-body">
           <div class="form-group">
             <label for="list-name">Name</label>
-            <!-- 3 bind input to watchlist.name -->
-            <input type="text" class="form-control" id="list-name" placeholder="Name this watchlist"
-              ng-model="watchlist.name" required/>
+            <!-- Bind input to watchlist.name -->
+            <input type="text"
+              class="form-control"
+              id="list-name"
+              placeholder="Name this watchlist"
+              ng-model="watchlist.name"
+              required>
           </div>
           <div class="form-group">
             <label for="list-description">Brief Description</label>
-            <input type="text" class="form-control" id="list-description" maxlength="40"
-              placeholder="Describe this watchlist" ng-model="watchlist.description" required/>
+            <!-- Bind input to watchlist.description -->
+            <input type="text"
+              class="form-control"
+              id="list-description"
+              maxlength="40"
+              placeholder="Describe this watchlist"
+              ng-model="watchlist.description"
+              required>
           </div>
         </div>
         <div class="modal-footer">
-          <!-- 5 Create list on click, but disable if form is invalid -->
-          <button class="btn btn-success" type="submit"
-                  ng-click="createList()"
-                  ng-disabled="!listForm.$valid">Create</button>
-          <button class="btn btn-danger" type="button" ng-click="$hide()">Cancel</button>
+          <!-- Create list on click, but disable if form is invalid -->
+          <button type="submit"
+            class="btn btn-success"
+            ng-click="createList()"
+            ng-disabled="!listForm.$valid">Create</button>
+          <button type="button"
+            class="btn btn-danger"
+            ng-click="$hide()">Cancel</button>
         </div>
       </form>
     </div>
   </div>
-
 </div>
