--- a/Documents/My work 2015/AngularProjects/StockDog/app/views/watchlist.html
+++ b/Documents/My work 2015/AngularProjects/StockDog/app/views/watchlist.html
@@ -24,7 +24,7 @@
           <p>Do so now by clicking the <span class="glyphicon glyphicon-plus"></span> located above.</p>
         </div>
         <!-- loop over all stocks and display company symbols -->
-        <p ng-repeat="stock in stocks">{{stock.company.symbol}}</p>
+        <stk-stock-table ng-show="stocks.length" watchlist="watchlist"></stk-stock-table>
       </div>
     </div>
   </div>
